update to Vector2 from NamedTuple

--- a/pygames/asteroids/asteroids_ecs.ipynb
+++ b/pygames/asteroids/asteroids_ecs.ipynb
@@ -21,11 +21,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pygame\n",
+    "from pygame.math import Vector2\n",
     "from typing import NamedTuple, Tuple, List, Type, Callable\n",
     "import os\n",
     "import sys\n",
@@ -108,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,14 +150,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "from collections import namedtuple\n",
     "\n",
     "# common data types\n",
-    "Vector2D = namedtuple(\"Vector2D\", [\"x\", \"y\"])\n",
     "KeyFrame = namedtuple(\"KeyFrame\", [\"tick\", \"value\"])\n",
     "\n",
     "\n",
@@ -191,7 +191,7 @@
     "class Transform:\n",
     "    def __init__(\n",
     "        self,\n",
-    "        center: Vector2D = Vector2D(0, 0),\n",
+    "        center: Vector2 = Vector2(0, 0),\n",
     "        # default forward direction is up ^\n",
     "        rotation: float = 0,\n",
     "        scale: float = 1.0,\n",
@@ -203,7 +203,7 @@
     "\n",
     "\n",
     "class Position:\n",
-    "    def __init__(self, position: Vector2D = Vector2D(0, 0)):\n",
+    "    def __init__(self, position: Vector2 = Vector2(0, 0)):\n",
     "        self.position = position\n",
     "\n",
     "\n",
@@ -236,7 +236,7 @@
     "class Shape:\n",
     "    def __init__(\n",
     "        self,\n",
-    "        points: List[Tuple[float, float]],\n",
+    "        points: List[Vector2]\n",
     "    ):\n",
     "        self.points_source = points\n",
     "        # use this to transform source points for rendering\n",
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,9 +403,9 @@
     "\n",
     "def generate_circle(\n",
     "    radius: float, num_points: int, func: Callable[[float], float] = lambda x: x\n",
-    ") -> List[Tuple[float, float]]:\n",
+    ") -> List[Vector2]:\n",
     "    \"\"\"return a list of points that form a circle\"\"\"\n",
-    "    points = []\n",
+    "    points : List[Vector2] = []\n",
     "    angle = 2 * math.pi / num_points\n",
     "\n",
     "    for i in range(num_points):\n",
@@ -413,12 +413,12 @@
     "        length = func(radius)\n",
     "        x = length * math.cos(angle * i)\n",
     "        y = length * math.sin(angle * i)\n",
-    "        points.append((x, y))\n",
+    "        points.append(Vector2(x, y))\n",
     "\n",
     "    return points\n",
     "\n",
     "\n",
-    "def generate_asteroid(radius, num_points) -> List[Tuple[float, float]]:\n",
+    "def generate_asteroid(radius, num_points) -> List[Vector2]:\n",
     "    \"\"\"return a list of points that form an asteroid by adding noise to radius\"\"\"\n",
     "    # `numpy.random.uniform` function to generate noise with a more uniform\n",
     "    # distribution between the minimum and maximum radii\n",
@@ -427,7 +427,7 @@
     "    return points\n",
     "\n",
     "\n",
-    "def generate_ship(radius) -> List[Tuple[float, float]]:\n",
+    "def generate_ship(radius) -> List[Vector2]:\n",
     "    \"\"\"return a list of points that form a ship\"\"\"\n",
     "    points = generate_circle(radius, 3)\n",
     "    return points\n"
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,7 +463,7 @@
     "    ship_input = Input()\n",
     "    ship_transform = Transform()\n",
     "    ship_position = Position(\n",
-    "        Vector2D(int(RENDER_CONTEXT.WIDTH * 0.5), int(RENDER_CONTEXT.HEIGHT * 0.5))\n",
+    "        Vector2(int(RENDER_CONTEXT.WIDTH * 0.5), int(RENDER_CONTEXT.HEIGHT * 0.5))\n",
     "    )\n",
     "    ship_rotation = Rotation(0)\n",
     "    ship_velocity = Velocity(0, 0, 0)\n",
@@ -492,7 +492,7 @@
     "    asteroid_has_key_frame = HasKeyFrame(KeyFrame(angle_degree, rotation_speed))\n",
     "    asteroid_transform = Transform()\n",
     "    asteroid_position = Position(\n",
-    "        Vector2D(\n",
+    "        Vector2(\n",
     "            random.randint(0, RENDER_CONTEXT.WIDTH),\n",
     "            random.randint(0, RENDER_CONTEXT.HEIGHT),\n",
     "        )\n",
@@ -536,16 +536,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Implement Systems that operate on the components\n",
+    "# Implement Systems to update based ComponentManager collections\n",
     "class SystemABC(ABC):\n",
     "    @abstractmethod\n",
     "    def update(self, cm: ComponentManager, **kwargs) -> None:\n",
     "        \"\"\"Update the system with the given component manager\"\"\"\n",
-    "\n",
     "\n",
     "class ShapeABC(ABC):\n",
     "    \"\"\"\n",
@@ -556,8 +555,8 @@
     "    @staticmethod\n",
     "    @abstractmethod\n",
     "    def _rotatePoints(\n",
-    "        points: List[Tuple[float, float]], angle: float\n",
-    "    ) -> List[Tuple[float, float]]:\n",
+    "        points: List[Vector2], angle: float\n",
+    "    ) -> List[Vector2]:\n",
     "        \"\"\"Rotate a list of points by a given angle, center is assumed to be (0,0)\"\"\"\n",
     "        angle_rad = math.radians(angle)\n",
     "        rotated_points = []\n",
@@ -579,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -625,22 +624,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
     "class PositioningSystem(SystemABC):\n",
     "    @staticmethod\n",
-    "    def _screen_wrap(position: Vector2D) -> Vector2D:\n",
+    "    def _screen_wrap(position: Vector2) -> Vector2:\n",
     "        \"\"\"Wrap a position to the screen\"\"\"\n",
-    "        return Vector2D(\n",
+    "        return Vector2(\n",
     "            position.x % RENDER_CONTEXT.WIDTH, position.y % RENDER_CONTEXT.HEIGHT\n",
     "        )\n",
     "\n",
     "    @staticmethod\n",
     "    def _forward_position(\n",
-    "        position: Vector2D, angle_degrees: float, magnitude: float\n",
-    "    ) -> Vector2D:\n",
+    "        position: Vector2, angle_degrees: float, magnitude: float\n",
+    "    ) -> Vector2:\n",
     "        \"\"\"Calculate the forward position of an entity\"\"\"\n",
     "        # Convert angle from degrees to radians\n",
     "        angle_radians = math.radians(angle_degrees)\n",
@@ -653,7 +652,7 @@
     "        dir_x = position.x + dx\n",
     "        dir_y = position.y + dy\n",
     "\n",
-    "        return Vector2D(dir_x, dir_y)\n",
+    "        return Vector2(dir_x, dir_y)\n",
     "\n",
     "    def update(self, cm: ComponentManager, **kwargs) -> None:\n",
     "        \"\"\"\n",
@@ -680,8 +679,8 @@
     "class RotationalSystem(SystemABC, ShapeABC):\n",
     "    @staticmethod\n",
     "    def _rotatePoints(\n",
-    "        points: List[Tuple[float, float]], angle: float\n",
-    "    ) -> List[Tuple[float, float]]:\n",
+    "        points: List[Vector2], angle: float\n",
+    "    ) -> List[Vector2]:\n",
     "        return ShapeABC._rotatePoints(points, angle)\n",
     "\n",
     "    def update(self, cm: ComponentManager, **kwargs) -> None:\n",
@@ -707,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -740,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -776,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -809,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -835,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
