adding Vector2Transform to perform 2d xform

--- a/pygames/asteroids/asteroids_ecs.ipynb
+++ b/pygames/asteroids/asteroids_ecs.ipynb
@@ -21,13 +21,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pygame\n",
     "from pygame.math import Vector2\n",
-    "from typing import NamedTuple, Tuple, List, Type, Callable\n",
+    "from typing import NamedTuple, Tuple, List, Callable\n",
     "import os\n",
     "import sys\n",
     "\n",
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,13 +387,56 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "##### **Vector2 Transform**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "from pygame.math import Vector2\n",
+    "\n",
+    "class Vector2Transform:\n",
+    "    \"\"\"\n",
+    "    Helper class for performing 2D vector transformations\n",
+    "    \"\"\"\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def rotate_vector(vector: Vector2, radian_angle: float) -> Vector2:\n",
+    "        \"\"\"Rotate a vector by a given radian angle, center is assumed to be (0,0)\"\"\"\n",
+    "        return vector.rotate_rad(radian_angle)\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def angle_from_vector(vector: Vector2) -> float:\n",
+    "        \"\"\"Get the angle of a vector in radians\"\"\"\n",
+    "        return math.atan2(vector.y, vector.x)\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def rotate_vectors(points: List[Vector2], angle: float) -> List[Vector2]:\n",
+    "        \"\"\"Rotate a list of points by a given angle, center is assumed to be (0,0)\"\"\"\n",
+    "        angle_rad = math.radians(angle)\n",
+    "        rotated_points: List[Vector2] = []\n",
+    "        for point in points:\n",
+    "            rotated_vector = Vector2Transform.rotate_vector(point, angle_rad)\n",
+    "            rotated_points.append(rotated_vector)\n",
+    "        return rotated_points\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "##### **Generate Shapes**\n",
     "- List of x,y `points`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -536,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,28 +587,7 @@
     "class SystemABC(ABC):\n",
     "    @abstractmethod\n",
     "    def update(self, cm: ComponentManager, **kwargs) -> None:\n",
-    "        \"\"\"Update the system with the given component manager\"\"\"\n",
-    "\n",
-    "class ShapeABC(ABC):\n",
-    "    \"\"\"\n",
-    "    Helper class for shape systems, contains static methods for :\n",
-    "    - rotating points\n",
-    "    \"\"\"\n",
-    "\n",
-    "    @staticmethod\n",
-    "    @abstractmethod\n",
-    "    def _rotatePoints(\n",
-    "        points: List[Vector2], angle: float\n",
-    "    ) -> List[Vector2]:\n",
-    "        \"\"\"Rotate a list of points by a given angle, center is assumed to be (0,0)\"\"\"\n",
-    "        angle_rad = math.radians(angle)\n",
-    "        rotated_points = []\n",
-    "        for point in points:\n",
-    "            x, y = point\n",
-    "            new_x = x * math.cos(angle_rad) - y * math.sin(angle_rad)\n",
-    "            new_y = x * math.sin(angle_rad) + y * math.cos(angle_rad)\n",
-    "            rotated_points.append((new_x, new_y))\n",
-    "        return rotated_points\n"
+    "        \"\"\"Update the system with the given component manager\"\"\"\n"
    ]
   },
   {
@@ -578,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -619,12 +641,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### **Transform and Rotate**"
+    "##### **Position and Rotate**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -676,13 +698,7 @@
     "            p.position = PositioningSystem._screen_wrap(forward_position)\n",
     "\n",
     "\n",
-    "class RotationalSystem(SystemABC, ShapeABC):\n",
-    "    @staticmethod\n",
-    "    def _rotatePoints(\n",
-    "        points: List[Vector2], angle: float\n",
-    "    ) -> List[Vector2]:\n",
-    "        return ShapeABC._rotatePoints(points, angle)\n",
-    "\n",
+    "class RotationalSystem(SystemABC):\n",
     "    def update(self, cm: ComponentManager, **kwargs) -> None:\n",
     "        \"\"\"Rotate entities with a rotation component\"\"\"\n",
     "        super().update(cm, **kwargs)\n",
@@ -690,7 +706,7 @@
     "        for entity in entities:\n",
     "            rotation = cm.get_component(entity, Rotation)\n",
     "            shape = cm.get_component(entity, Shape)\n",
-    "            rotated_shape = RotationalSystem._rotatePoints(\n",
+    "            rotated_shape = Vector2Transform.rotate_vectors(\n",
     "                shape.points_source, rotation.angle\n",
     "            )\n",
     "            shape.points_render = rotated_shape\n"
@@ -706,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -739,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -775,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -808,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -834,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -945,9 +961,65 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Explain the difference between `radian` and `angle` as if I am 5\n",
+    "***\n",
+    "\n",
+    "Alright, let's use a simple example to explain the difference between an angle  \n",
+    "and a radian.\n",
+    "\n",
+    "Imagine you have a yummy pizza. You want to cut the pizza into equal pieces. To  \n",
+    "do that, you need to cut it at a certain angle. An angle is a measure of how  \n",
+    "much you need to turn to go from one side of the pizza slice to the other. You  \n",
+    "can think of an `angle like a corner in a shape`.\n",
+    "\n",
+    "Now let's talk about radians. Radians are just another way to measure angles.  \n",
+    "Imagine you have a piece of string that is the same length as the radius of the  \n",
+    "pizza (the distance from the center of the pizza to the edge). If you lay the  \n",
+    "string along the edge of a pizza slice and it fits perfectly from one side of  \n",
+    "the slice to the other, that means the angle of the slice is 1 radian. It's just  \n",
+    "another way of saying how big the angle is, like inches and centimeters are  \n",
+    "different ways of measuring length.\n",
+    "\n",
+    "So, the `angle` tells you how much to `turn` or `how big the corner` is, and `radians`  \n",
+    "are a way of `measuring that angle`."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Explain like I am 5 when I would **`need to use radian`**\n",
+    "***\n",
+    "\n",
+    "Alright, let's imagine a situation where you might need to use radians.\n",
+    "\n",
+    "Imagine you're playing with a toy car on a big circular rug. You want your car  \n",
+    "to drive along the edge of the rug, but you want to know how far it needs to  \n",
+    "turn to go from one point to another along the edge.\n",
+    "\n",
+    "When talking about turning or going around circles, we use radians to measure  \n",
+    "the turn. \n",
+    "\n",
+    "**`Radians help us understand how much of the circle we're covering`**.  \n",
+    "\n",
+    "It's like making a cake and saying, \"I want 1/4 of the cake,\" but instead, we  \n",
+    "say we want to turn 1/4 of a full circle.\n",
+    "\n",
+    "So, when you're playing with your toy car on a circular rug, you use radians to  \n",
+    "help you measure how far it needs to turn to go from one point to another along  \n",
+    "the edge of the rug."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Explain the performance and memory difference between : \n",
     "- `directly` drawing polygon and `rotating the points` \n",
     "- `rasterizing` to a surface and `rotating the surface`\n",
+    "***\n",
     "\n",
     "Both methods of rotating a polygon in Pygame - rotating the points and redrawing  \n",
     "the polygon vs. drawing the polygon to a surface and rotating it - have their  \n",
