--- a/pygames/asteroids/asteroids_ecs.ipynb
+++ b/pygames/asteroids/asteroids_ecs.ipynb
@@ -21,13 +21,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pygame\n",
     "from pygame.math import Vector2\n",
-    "from typing import NamedTuple, Tuple, List, Callable\n",
+    "from typing import NamedTuple, Tuple, List, Callable, Optional\n",
     "import os\n",
     "import sys\n",
     "\n",
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,13 +342,9 @@
     "        \"\"\"Get a component of a specific type from an entity\"\"\"\n",
     "\n",
     "    @abstractmethod\n",
-    "    def get_entities_with_component(self, component_type: Type) -> List[Entity]:\n",
-    "        \"\"\"Get a list of entities that have A SINGLE SPECIFIC COMPONENT type\"\"\"\n",
-    "\n",
-    "    @abstractmethod\n",
     "    def get_entities_with_all_components(\n",
     "        self, component_types: List[Type]\n",
-    "    ) -> List[Entity]:\n",
+    "    ) -> Optional[List[Entity]]:\n",
     "        \"\"\"Get a list of entities that have ALL of the specified COMPONENTS\"\"\"\n",
     "\n",
     "\n",
@@ -401,25 +397,24 @@
     "                f\"[ERROR] tried to --get_component-- [{component_type.__name__}] that does not exist on entity [{entity.name}]\"\n",
     "            )\n",
     "\n",
-    "    def get_entities_with_component(self, component_type: Type) -> List[Entity]:\n",
-    "        entities = []\n",
-    "        for entity_id, components in self.components.items():\n",
-    "            if component_type in components:\n",
-    "                entities.append(Entity(entity_id))\n",
-    "        return entities\n",
-    "\n",
     "    def get_entities_with_all_components(\n",
-    "        self, component_types: List[Type]\n",
-    "    ) -> List[Entity]:\n",
-    "        entities = []\n",
+    "        self, component_types: Optional[List[Type]]\n",
+    "    ) -> Optional[List[Entity]]:\n",
+    "        # early exit with None if no component types passed in\n",
+    "        if component_types is None:\n",
+    "            return None\n",
     "        # @audit 💨 : Convert the list of component types to a set for faster lookup\n",
     "        # - in O(1) time instead of O(n) time where n is # of component types\n",
     "        # - order of component types passed in does not matter, any permutation\n",
     "        # will give the same result\n",
     "        component_set = set(component_types)\n",
+    "        entities = []\n",
     "        for entity_id, components in self.components.items():\n",
     "            if component_set.issubset(set(components.keys())):\n",
     "                entities.append(Entity(entity_id))\n",
+    "        # if no entities found, return None\n",
+    "        if len(entities) == 0:\n",
+    "            return None\n",
     "        return entities\n"
    ]
   },
@@ -441,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -630,30 +625,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import Optional\n",
-    "\n",
-    "\n",
     "# Implement Systems to update based ComponentManager collections\n",
     "class SystemABC(ABC):\n",
-    "    def __init__(self, c_manager: ComponentManager, components: List[Type[ComponentABC]]) -> None:\n",
-    "        self.c_manager = c_manager\n",
-    "        self.components = components\n",
-    "        # @todo : figure out how to use Optional\n",
-    "        # self.entities: Optional[List[Entity]] = None\n",
-    "        self.entities : List[Entity] = []\n",
+    "    \"\"\"Abstract class for a system that updates based on a component manager\"\"\"\n",
+    "\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        c_manager: ComponentManager,\n",
+    "        components: Optional[List[Type[ComponentABC]]] = None,\n",
+    "    ) -> None:\n",
+    "        \"\"\"\n",
+    "        Initialize the SystemABC instance\n",
+    "        :param c_manager: ComponentManager instance\n",
+    "        :param components: List of components to filter entities\n",
+    "        \"\"\"\n",
+    "        self._c_manager = c_manager\n",
+    "        self._components = components\n",
+    "        self.entities: Optional[List[Entity]] = None\n",
+    "        self.entities = SystemABC.try_gather_all_entities(\n",
+    "            self._c_manager, self._components\n",
+    "        )\n",
+    "        print(f\"[entities] Initial gathering for {self.__class__.__name__}\")\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def try_gather_all_entities(\n",
+    "        c_manager: ComponentManager, components: Optional[List[Type[ComponentABC]]]\n",
+    "    ) -> Optional[List[Entity]]:\n",
+    "        \"\"\"return a list of entities that have all the given components\"\"\"\n",
+    "        # Regather entities if not intialized or if the component manager is dirty\n",
+    "        # @todo : also check is_dirty flag\n",
+    "        entities = None\n",
+    "        if components is None:\n",
+    "            return entities\n",
+    "        else:\n",
+    "            entities = c_manager.get_entities_with_all_components(components)\n",
+    "        return entities\n",
     "\n",
     "    @abstractmethod\n",
     "    def update(self, **kwargs) -> None:\n",
     "        \"\"\"Update the system with the given component manager\"\"\"\n",
-    "        # Regather entities if not intialized or if the component manager is dirty\n",
-    "        if len(self.entities) < 1:\n",
-    "            # @todo : also check is_dirty flag\n",
-    "            self.entities = self.c_manager.get_entities_with_all_components(self.components)\n",
-    "            print(f'[entities] Regathering for {self.__class__.__name__}')\n"
+    "        # check if we need to regather entities\n",
+    "        if self.entities is None:\n",
+    "            print(f\"[entities] Regathering for {self.__class__.__name__}\")\n",
+    "            self.entities = SystemABC.try_gather_all_entities(\n",
+    "                self._c_manager, self._components\n",
+    "            )\n"
    ]
   },
   {
@@ -666,33 +686,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
     "class InputSystem(SystemABC):\n",
     "    def _on_keydown(self, entity, event) -> None:\n",
     "        if event.key == pygame.K_UP:\n",
-    "            velocity = self.c_manager.get_component(entity, Velocity)\n",
+    "            velocity = self._c_manager.get_component(entity, Velocity)\n",
     "            velocity.magnitude += 1\n",
     "        elif event.key == pygame.K_DOWN:\n",
-    "            velocity = self.c_manager.get_component(entity, Velocity)\n",
+    "            velocity = self._c_manager.get_component(entity, Velocity)\n",
     "            velocity.magnitude -= 1\n",
     "        if event.key == pygame.K_RIGHT:\n",
-    "            rotation = self.c_manager.get_component(entity, Rotation)\n",
+    "            rotation = self._c_manager.get_component(entity, Rotation)\n",
     "            rotation.angle = (rotation.angle + 5) % 360\n",
     "        elif event.key == pygame.K_LEFT:\n",
-    "            rotation = self.c_manager.get_component(entity, Rotation)\n",
+    "            rotation = self._c_manager.get_component(entity, Rotation)\n",
     "            rotation.angle = (rotation.angle - 5) % 360\n",
     "\n",
     "    def _on_keyup(self, entity, event) -> None:\n",
-    "        velocity = self.c_manager.get_component(entity, Velocity)\n",
+    "        velocity = self._c_manager.get_component(entity, Velocity)\n",
     "\n",
     "    def update(self, event: pygame.event.Event, **kwargs) -> None:\n",
     "        \"\"\"Handle input events for entities with an input component\"\"\"\n",
     "        super().update(**kwargs)\n",
     "        # early exit if no event\n",
     "        if event is None:\n",
+    "            return\n",
+    "        # early exit if no entities\n",
+    "        if self.entities is None:\n",
     "            return\n",
     "        for entity in self.entities:\n",
     "            if event.type == pygame.KEYDOWN:\n",
@@ -711,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -747,12 +770,13 @@
     "        - with screen wrapping\n",
     "        \"\"\"\n",
     "        super().update(**kwargs)\n",
-    "\n",
+    "        if self.entities is None:\n",
+    "            return\n",
     "        for entity in self.entities:\n",
-    "            p = self.c_manager.get_component(entity, Position)\n",
-    "            magnitude = self.c_manager.get_component(entity, Velocity).magnitude\n",
+    "            p = self._c_manager.get_component(entity, Position)\n",
+    "            magnitude = self._c_manager.get_component(entity, Velocity).magnitude\n",
     "            # Update position based on velocity and rotation if necessary\n",
-    "            angle = self.c_manager.get_component(entity, Rotation).angle\n",
+    "            angle = self._c_manager.get_component(entity, Rotation).angle\n",
     "            # calculate forward position\n",
     "            forward_position = PositioningSystem._forward_position(\n",
     "                p.position, angle, magnitude\n",
@@ -765,14 +789,14 @@
     "    def update(self, **kwargs) -> None:\n",
     "        \"\"\"Rotate entities with a rotation component\"\"\"\n",
     "        super().update(**kwargs)\n",
+    "        if self.entities is None:\n",
+    "            return\n",
     "        for entity in self.entities:\n",
-    "            rotation = self.c_manager.get_component(entity, Rotation)\n",
-    "            shape = self.c_manager.get_component(entity, Shape)\n",
+    "            rotation = self._c_manager.get_component(entity, Rotation)\n",
+    "            shape = self._c_manager.get_component(entity, Shape)\n",
     "            rotated_meshes: List[List[Vector2]] = []\n",
     "            for mesh in shape.vertices_source:\n",
-    "                rotated_mesh = Vector2Transform.rotate_vectors(\n",
-    "                    mesh, rotation.angle\n",
-    "                )\n",
+    "                rotated_mesh = Vector2Transform.rotate_vectors(mesh, rotation.angle)\n",
     "                rotated_meshes.append(rotated_mesh)\n",
     "            shape.vertices_render = rotated_meshes\n"
    ]
@@ -787,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -795,10 +819,11 @@
     "    def update(self, **kwargs) -> None:\n",
     "        \"\"\"Animate asteroids\"\"\"\n",
     "        super().update(**kwargs)\n",
-    "\n",
+    "        if self.entities is None:\n",
+    "            return\n",
     "        for entity in self.entities:\n",
-    "            xform = self.c_manager.get_component(entity, Transform)\n",
-    "            animation = self.c_manager.get_component(entity, HasKeyFrame)\n",
+    "            xform = self._c_manager.get_component(entity, Transform)\n",
+    "            animation = self._c_manager.get_component(entity, HasKeyFrame)\n",
     "            # tick == current angle\n",
     "            # value == angle increment\n",
     "            # modulus 360 to keep angle in range\n",
@@ -818,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -855,8 +880,10 @@
     "    def update(self, **kwargs) -> None:\n",
     "        super().update(**kwargs) \n",
     "        # Render all entities with a position and points component\n",
+    "        if self.entities is None:\n",
+    "            return\n",
     "        for entity in self.entities:\n",
-    "            RenderShape.draw(self.screen, self.c_manager, entity)\n"
+    "            RenderShape.draw(self.screen, self._c_manager, entity)\n"
    ]
   },
   {
@@ -869,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -906,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -940,26 +967,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[entities] Regathering for PositioningSystem\n",
-      "[entities] Regathering for RotationalSystem\n",
-      "[entities] Regathering for AnimateAsteroidsSystem\n",
-      "[entities] Regathering for ShapeDrawSystem\n",
-      "[entities] Regathering for InputSystem\n"
+      "[entities] Initial gathering for InputSystem\n",
+      "[entities] Initial gathering for PositioningSystem\n",
+      "[entities] Initial gathering for RotationalSystem\n",
+      "[entities] Initial gathering for AnimateAsteroidsSystem\n",
+      "[entities] Initial gathering for ShapeDrawSystem\n"
      ]
     }
    ],
    "source": [
     "def main() -> None:\n",
-    "    # Initialization\n",
+    "    # [INIT] - systems, context and COMPONENT managers\n",
     "    context_sys = on_awake()\n",
     "    c_manager = ComponentManager()\n",
+    "\n",
+    "    # [INIT] - game ENTITIES\n",
+    "    # @note 🧠 : Populate entities BEFORE systems, so we can cache entities on\n",
+    "    # system inits\n",
+    "    # Create ship\n",
+    "    spawn_ship(c_manager)\n",
+    "    # Create asteroid\n",
+    "    spawn_asteroids(5, c_manager)\n",
+    "\n",
+    "    # [INIT] - game SYSTEMS\n",
     "    input_system = InputSystem(c_manager, [Input, Velocity, Rotation])\n",
     "    positioning_system = PositioningSystem(\n",
     "        c_manager, [Shape, Position, Rotation, Velocity]\n",
@@ -985,20 +1022,18 @@
     "        c_manager, [UI_Element], context_sys.screen, context_sys.clock\n",
     "    )\n",
     "\n",
-    "    # Create ship\n",
-    "    spawn_ship(c_manager)\n",
-    "    # Create asteroid\n",
-    "    spawn_asteroids(5, c_manager)\n",
-    "\n",
     "    \"\"\"DEBUG\"\"\"\n",
     "    is_super_hot = False\n",
     "    text_blit_system_debug_player_rotation = TextBlitSystem(\n",
     "        c_manager, [UI_Element], context_sys.screen, (280, 410)\n",
     "    )\n",
-    "    player_ship = c_manager.get_entities_with_all_components([Shape, Input, Rotation])[\n",
-    "        0\n",
-    "    ]\n",
-    "    player_rotation = c_manager.get_component(player_ship, Rotation)\n",
+    "    player_entities = c_manager.get_entities_with_all_components(\n",
+    "        [Shape, Input, Rotation]\n",
+    "    )\n",
+    "    if player_entities is not None and len(player_entities) > 0:\n",
+    "        player_rotation = c_manager.get_component(player_entities[0], Rotation)\n",
+    "    else:\n",
+    "        player_rotation = None\n",
     "    \"\"\"DEBUG\"\"\"\n",
     "\n",
     "    # Main game loop\n",
@@ -1040,9 +1075,10 @@
     "            text_blit_system_fps.update(\n",
     "                message=f\"FPS: {context_sys.clock.get_fps():.2f}\"\n",
     "            )\n",
-    "            text_blit_system_debug_player_rotation.update(\n",
-    "                message=f\"Player rotation: {player_rotation.angle:.2f}\",\n",
-    "            )\n",
+    "            if player_rotation is not None:\n",
+    "                text_blit_system_debug_player_rotation.update(\n",
+    "                    message=f\"Player rotation: {player_rotation.angle:.2f}\",\n",
+    "                )\n",
     "            # Update display\n",
     "            pygame.display.update()\n",
     "            # End frame tick\n",
