FrameUpdateSystemABC to handle non entity frames

--- a/pygames/asteroids/asteroids_ecs.ipynb
+++ b/pygames/asteroids/asteroids_ecs.ipynb
@@ -21,9 +21,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pygame 2.3.0 (SDL 2.24.2, Python 3.9.13)\n",
+      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
+     ]
+    }
+   ],
    "source": [
     "import pygame\n",
     "from pygame.math import Vector2\n",
@@ -109,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -480,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -625,13 +634,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Implement Systems to update based ComponentManager collections\n",
-    "class SystemABC(ABC):\n",
-    "    \"\"\"Abstract class for a system that updates based on a component manager\"\"\"\n",
+    "class FrameUpdateSystemABC(ABC):\n",
+    "    \"\"\"Interface for Frame Update System with cached screen context\"\"\"\n",
+    "\n",
+    "    def __init__(self, screen: pygame.Surface) -> None:\n",
+    "        self.screen = screen\n",
+    "\n",
+    "    @abstractmethod\n",
+    "    def update(self, **kwargs) -> None:\n",
+    "        pass\n",
+    "\n",
+    "\n",
+    "class EntitySystemABC(ABC):\n",
+    "    \"\"\"Interface for Entity System that updates entities cached from ComponentManager\"\"\"\n",
     "\n",
     "    def __init__(\n",
     "        self,\n",
@@ -646,7 +665,7 @@
     "        self._c_manager = c_manager\n",
     "        self._components = components\n",
     "        self.entities: Optional[List[Entity]] = None\n",
-    "        self.entities = SystemABC.try_gather_all_entities(\n",
+    "        self.entities = EntitySystemABC.try_gather_all_entities(\n",
     "            self._c_manager, self._components\n",
     "        )\n",
     "        print(f\"[entities] Initial gathering for {self.__class__.__name__}\")\n",
@@ -671,7 +690,7 @@
     "        # check if we need to regather entities\n",
     "        if self.entities is None:\n",
     "            print(f\"[entities] Regathering for {self.__class__.__name__}\")\n",
-    "            self.entities = SystemABC.try_gather_all_entities(\n",
+    "            self.entities = EntitySystemABC.try_gather_all_entities(\n",
     "                self._c_manager, self._components\n",
     "            )\n"
    ]
@@ -686,11 +705,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class InputSystem(SystemABC):\n",
+    "class InputSystem(EntitySystemABC):\n",
     "    def _on_keydown(self, entity, event) -> None:\n",
     "        if event.key == pygame.K_UP:\n",
     "            velocity = self._c_manager.get_component(entity, Velocity)\n",
@@ -734,11 +753,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class PositioningSystem(SystemABC):\n",
+    "class PositioningSystem(EntitySystemABC):\n",
     "    @staticmethod\n",
     "    def _screen_wrap(position: Vector2) -> Vector2:\n",
     "        \"\"\"Wrap a position to the screen\"\"\"\n",
@@ -785,7 +804,7 @@
     "            p.position = PositioningSystem._screen_wrap(forward_position)\n",
     "\n",
     "\n",
-    "class RotationalSystem(SystemABC):\n",
+    "class RotationalSystem(EntitySystemABC):\n",
     "    def update(self, **kwargs) -> None:\n",
     "        \"\"\"Rotate entities with a rotation component\"\"\"\n",
     "        super().update(**kwargs)\n",
@@ -811,11 +830,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class AnimateAsteroidsSystem(SystemABC):\n",
+    "class AnimateAsteroidsSystem(EntitySystemABC):\n",
     "    def update(self, **kwargs) -> None:\n",
     "        \"\"\"Animate asteroids\"\"\"\n",
     "        super().update(**kwargs)\n",
@@ -843,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -864,7 +883,7 @@
     "            )\n",
     "\n",
     "\n",
-    "class ShapeDrawSystem(SystemABC):\n",
+    "class ShapeDrawSystem(EntitySystemABC):\n",
     "    def __init__(\n",
     "        self,\n",
     "        c_manager: ComponentManager,\n",
@@ -896,29 +915,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class TextBlitSystem():\n",
+    "class TextBlitSystem(FrameUpdateSystemABC):\n",
     "    def __init__(\n",
     "        self,\n",
-    "        c_manager: ComponentManager,\n",
-    "        components: List[Type[ComponentABC]],\n",
     "        screen: pygame.Surface,\n",
     "        position: Tuple[int, int],\n",
     "        font_size=24,\n",
     "        color=(255, 255, 255),\n",
     "    ):\n",
     "        \"\"\"Draw text to surface at given position\"\"\"\n",
-    "        # super().__init__(c_manager, components)\n",
-    "        self.screen = screen\n",
+    "        super().__init__(screen)\n",
     "        self.position = position\n",
     "        self.font = pygame.font.SysFont(\"none\", font_size)\n",
     "        self.color = color\n",
     "\n",
     "    def update(self, message: str, **kwargs) -> None:\n",
-    "        # super().update(**kwargs)\n",
+    "        super().update(**kwargs)\n",
     "        text_surface = self.font.render(message, True, self.color)\n",
     "        self.screen.blit(text_surface, self.position)\n"
    ]
@@ -933,25 +949,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class EndFrameTickSystem():\n",
-    "    def __init__(\n",
-    "        self,\n",
-    "        c_manager: ComponentManager,\n",
-    "        components: List[Type[ComponentABC]],\n",
-    "        screen: pygame.Surface,\n",
-    "        clock: pygame.time.Clock,\n",
-    "    ):\n",
-    "        \"\"\"Limit fps and clear screen at end of frame\"\"\"\n",
-    "        # super().__init__(c_manager, components)\n",
+    "class EndFrameTickSystem(FrameUpdateSystemABC):\n",
+    "    def __init__(self, screen: pygame.Surface, clock: pygame.time.Clock):\n",
+    "        \"\"\"End frame and tick clock\"\"\"\n",
+    "        super().__init__(screen)\n",
     "        self.screen = screen\n",
     "        self.clock = clock\n",
     "\n",
     "    def update(self, **kwargs) -> None:\n",
-    "        # super().update(**kwargs)\n",
+    "        super().update(**kwargs)\n",
     "        self.screen.fill(RENDER_CONTEXT.BACKGROUND_COLOR)\n",
     "        self.clock.tick(RENDER_CONTEXT.FPS)\n"
    ]
@@ -967,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1012,20 +1022,14 @@
     "        context_sys.screen,\n",
     "        context_sys.clock,\n",
     "    )\n",
-    "    text_blit_system_fps = TextBlitSystem(\n",
-    "        c_manager, [UI_Element], context_sys.screen, (280, 430)\n",
-    "    )\n",
-    "    text_blit_system_event = TextBlitSystem(\n",
-    "        c_manager, [UI_Element], context_sys.screen, (10, 450), 18\n",
-    "    )\n",
-    "    end_frame_tick_system = EndFrameTickSystem(\n",
-    "        c_manager, [UI_Element], context_sys.screen, context_sys.clock\n",
-    "    )\n",
+    "    text_blit_system_fps = TextBlitSystem(context_sys.screen, (280, 430))\n",
+    "    text_blit_system_event = TextBlitSystem(context_sys.screen, (10, 450), 18)\n",
+    "    end_frame_tick_system = EndFrameTickSystem(context_sys.screen, context_sys.clock)\n",
     "\n",
     "    \"\"\"DEBUG\"\"\"\n",
     "    is_super_hot = False\n",
     "    text_blit_system_debug_player_rotation = TextBlitSystem(\n",
-    "        c_manager, [UI_Element], context_sys.screen, (280, 410)\n",
+    "        context_sys.screen, (280, 410)\n",
     "    )\n",
     "    player_entities = c_manager.get_entities_with_all_components(\n",
     "        [Shape, Input, Rotation]\n",
